    to be in the map objects when moved between maps.
  - Fixed a walking bug that caused monsters to walk trough certain objects.
  - type="3" in bodyinfo.xml is now correctly interpreted by the core.
  - Exploit bugfix for locked containers.
  - The status only shows the gold directly in your backpack now. (performance issues)
  - Fixed a vision range bug with walking.
  - Fixed many compiler warnings for GCC 3.4 versions, and general warnings.
  - Updated SQLite to 2.8.15 and defaulted SQLite to encode data with UTF-8.
  - Added a new feature to random: <random randomlist="list1,list2" />
    This will select a random value from a random list.
  - Added new features to container items (made list work as well):
    <container><item list="list" /><item randomlist="list1,list2" /></container>
 * Definition Changes:
  - Added the mage AI to most creatures.
  - Adjusted carving sheep.
  - Fixed leatherworkers and tanners not buying leather and hides.
  - Male NPCs now have a 75% chance of getting a beard when created.
  - Made shrink potions craftable.
  - Changed the color of shrink potions.
  - Added Tokuno includes for regions and spawnregions.
  - Removed the "Pink Spawn" from decoration.
  - Fixed skeletal steeds stats and skills.
  - Added stackable burned food that is used when cooking fails.
  - Added ranged weapons + ammo to orc scout, ratmen archer, meer captain and juka lord.
  - Added colored samurai armor.
  - Reorganized base armor categories.
  - New folder for defines: definitions/defines/
  - Applied the index.xml branches to colored armor.
  - Added lightsources to fire elementals, wisps and horde minions.
  - Added bones to bone_magi and body parts to horde minions, zombies and others.
  - Added colored weapons. Note: Only the metallic weapons.
  - Sorted out the samurai weapons by type and fixed properties.
  - Ranged weapons set to 10 instead of 12.
  - Price fixes for arrows/bolts.
  - Fixed potion kegs.
  - Gave guards colored hair.