@@ -2,11 +2,15 @@
 # Input
 HEADERS += \
 	$$PWD/ai.h \
-	$$PWD/ai_mage.h
+	$$PWD/ai_mage.h \
+	$$PWD/ai_bladespirit.h \
+	$$PWD/ai_energyvortex.h
 
 SOURCES += \ 
 	$$PWD/ai.cpp \
 	$$PWD/ai_animals.cpp \
 	$$PWD/ai_humans.cpp \
 	$$PWD/ai_monsters.cpp \
-	$$PWD/ai_mage.cpp
+	$$PWD/ai_mage.cpp \
+	$$PWD/ai_bladespirit.cpp \
+	$$PWD/ai_energyvortex.cpp
